--- a/Reto Final/index.html
+++ b/Reto Final/index.html
@@ -41,9 +41,9 @@
                             href="#Carrusel_Products">Producto</a></li>
                     <li class="nav-item mx-2"><a class="nav-link" href="#Description">Descripción</a>
                     </li>
-                    <li clsas="nav-item mx-2"><a class="nav-link" href="#Especificaciones">Especificaciones</a>
+                    <li class="nav-item mx-2"><a class="nav-link" href="#Especificaciones">Especificaciones</a>
                     </li>
-                    <li clsas="nav-item mx-2"><a class="nav-link" href="#Experiencias">Reviews</a>
+                    <li class="nav-item mx-2"><a class="nav-link" href="#Experiencias">Reviews</a>
                     </li>
                     <li class="nav-item mx-2"><a class="nav-link" href="#Shops">Tiendas</a>
                     </li>
@@ -173,9 +173,9 @@
                             <th scope="row">CUDA cores</th>
                             <td>5888</td>
                         </tr>
-                        <tr></tr>
-                        <th scope="row">Memoria Video</th>
-                        <td>12GB GDDR6X</td>
+                        <tr>
+                            <th scope="row">Memoria Video</th>
+                            <td>12GB GDDR6X</td>
                         </tr>
                         <tr>
                             <th scope="row">Bus Memoria</th>
