--- a/Reto 4/html/index.html
+++ b/Reto 4/html/index.html
@@ -42,7 +42,8 @@
         <!-- Datos game -->
         <article id="Eventos" data-bs-theme="dark" data-bs-spy="scroll" class="rounded-0">
             <!-- Imagenes -->
-            <div id="carouselExampleCaptions" class="carousel slide mt-5 mx-5 " data-bs-ride="carousel">
+            <div id="carouselExampleCaptions" class="carousel slide mt-1 mx-5 bg-body px-5 bg-opacity-75 card"
+                data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                         aria-current="true" aria-label="Slide 1"></button>
@@ -57,7 +58,7 @@
                             <img src="https://static.bandainamcoent.eu/high/my-hero-academia/my-hero-ultra-rumble/03-news/MHUR-Launch-Content/mhur-twitch-drops-new.jpg"
                                 class="d-block img-fluid mb-5 pb-5" alt="Drops en Twitch">
                         </div>
-                        <div class="carousel-caption d-none d-md-block bg-body bg-opacity-75 text-white rounded-3 ">
+                        <div class="carousel-caption d-none d-md-block  text-white rounded-3 ">
                             <h5>Drops en Twitch</h5>
                             <p>Consigue skins exclusivas para Iida y Himiko Toga al ver transmisiones en vivo.</p>
                         </div>
@@ -67,7 +68,8 @@
                             <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgs3VNspbWEmvjGsR4Pw3XRbPhToq1Oz8K5KFqVHF9_8EyoneHCxu4QmAcNFGC460naiiay9hAhKMlxaJT9t9JkBxxhH3MoC7D5EScaBtgi4SlhKsuYBHYzCBc8F6XYlX6RdQerNtB3hwRuOKZX2BEnTyvl2n_3wmvOTGwyYJic8tkSzqjFYvZDbZCmW4es/w1200-h675-p-k-no-nu/MHA7-TioCrunchyroll.jpg"
                                 class="d-block img-fluid mb-5 pb-5" alt="Evento Crunchyroll">
                         </div>
-                        <div class="carousel-caption d-none d-md-block bg-body bg-opacity-75 text-white rounded-3 ">
+                        <div class="carousel-caption d-none d-md-block  text-white rounded-3 ">
+                            <!-- bg-body bg-opacity-75 -->
                             <h5>Evento Crunchyroll</h5>
                             <p>Obtén skins especiales por ser suscriptor de Crunchyroll Premium.</p>
                         </div>
@@ -77,7 +79,7 @@
                             <img src="https://external-preview.redd.it/my-hero-academia-final-season-announced-for-2025-v0-MtePirMggV3EnOkKJkor-Ib2MNBVDdPO8HN-xxEhNDY.jpg?auto=webp&s=0cdd34815a83f725ffa02a7451179852ac8b0c1b"
                                 class="d-block img-fluid mb-5 pb-5" alt="Temporada final del anime">
                         </div>
-                        <div class="carousel-caption d-none d-md-block bg-body bg-opacity-75 text-white rounded-3 ">
+                        <div class="carousel-caption d-none d-md-block text-white rounded-3 ">
                             <h5>Temporada final del anime</h5>
                             <p>La saga de My Hero Academia llega a su épico desenlace en la última temporada.</p>
                         </div>
@@ -452,7 +454,7 @@
             <section id="Agencia" data-bs-spy="scroll">
                 <div>
                     <h2 class="text-center mb-5 mt-3"> Agencia </h2>
-                    <div class="card bg-body px-5 bg-opacity-25 mx-5 py-5">
+                    <div class="card bg-body px-5 bg-opacity-75 mx-5 py-5">
                         <div>
                             <h2 class="fs-1 text-warning mb-3">Go! Jonny Go!</h2>
                         </div>
@@ -465,8 +467,7 @@
     </main>
 
 
-
-    <footer class="bg-dark text-white text-center py-3 mt-4">
+    <footer class="bg-dark text-white text-center pb-1 pt-2">
         <p>@Go! Jonny Go!</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
