--- a/Reto Final/html/Contact.html
+++ b/Reto Final/html/Contact.html
@@ -26,28 +26,26 @@
 <body data-bs-theme="dark">
 
     <nav class="navbar fixed-top navbar-expand-lg bg-first-color">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="https://www.zotac.com/download/files/page/video/logo_Grow.png"
-                    alt="" style="max-height: 50px;" class="me-2">Zotac</a>
+        <div class="container-fluid justify-content-start align-items-end">
+            <a class="navbar-brand" href="../index.html"><img
+                    src="https://www.zotac.com/download/files/page/video/logo_Grow.png" alt="" style="max-height: 50px;"
+                    class="me-2">Zotac</a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <h3 class="ms-2 text-start">Contacto</h3>
 
-            <div class="collapse navbar-collapse d-flex justify-content-start" id="navbarNavAltMarkup">
-                <ul class="navbar-nav align-items-start nav-underline">
-                    <li class="nav-item mx-2"><a class="nav-link" aria-disabled="true" href="../index.html">Inicio</a>
-                    </li>
-                </ul>
+            <!-- <ul class="navbar-nav align-items-start nav-underline">
+                <li class="nav-item mx-2"><a class="nav-link" aria-disabled="true" href="../index.html">Inicio</a>
+                </li>
+            </ul> -->
 
-            </div>
         </div>
     </nav>
 
-    <main class="py-2">
-        <article class="pt-5 bg-dark bg-opacity-75">
-            <div class="m-5 px-2 d-flex justify-content-center">
+    <main class="py-5">
+        <article class="py-5 px-5 bg-dark bg-opacity-75">
+            <h2 class="mx-4 px-5">Contacto</h2>
+
+            <div class="m-5 px-4 d-flex justify-content-center">
                 <p>
                     Si deseas adquirir una GeForce RTX 4070 modelo Spiderman, por favor completa el siguiente formulario
                     con tus datos personales y de contacto. Nos pondremos en contacto contigo a la brevedad para
@@ -57,12 +55,13 @@
             <div class="row g-5 px-5 py-5 d-flex justify-content-center">
 
                 <!-- Imagen lateral (decoración) -->
-                <div
-                    class="col-sm col-md-5 col-lg-4 order-md-last bg-first-color d-flex justify-content-center bg-opacity-75 rounded-circle">
+                <div class="col-lg-4 order-last d-flex justify-content-center rounded-circle bg-first-color bg-opacity-75 align-items-center"
+                    style="max-width: 400px; max-height: 400px;">
                     <img src="https://www.zotac.com/download/files/page/spider_landing/SVPT1_0016_P1%20NEW_With%20Web_Updated%20Poses.png"
-                        alt="" class="w-75">
+                        alt="" style="max-width: 110%; max-height: 110%; object-fit: contain;">
                 </div>
-                <div class="col-md-6 col-lg-6">
+
+                <div class="col-lg-8">
                     <form class="needs-validation ms-5 mb-5" novalidate="">
                         <div class="row g-3" bis_skin_checked="1">
                             <div class="col-sm-6" bis_skin_checked="1">
@@ -155,7 +154,7 @@
     </main>
 
 
-    <footer class="bg-first-color pt-2 text-start pb-1 ps-5 text-third-color">
+    <footer class="bg-first-color text-white text-center pb-1 pt-2">
         <p>©ZOTAC 2025 Office <br> 1220 Highland Avenue, #1363 Duarte, CA 91010 USA</p>
     </footer>
 
