--- a/Reto Final/index.html
+++ b/Reto Final/index.html
@@ -60,17 +60,17 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="https://www.zotac.com/es/system/files/styles/w1024/private/product_gallery/graphics_cards/zt-d40700h-10smp-image02_1.jpg?itok=kVAwYkWf"
+                        <img src="https://www.zotac.com/es/system/files/styles/w1024/private/product_gallery/graphics_cards/zt-d40700h-10smp-image09_0.jpg?itok=Amt6gjA4"
                             class="d-block mx-auto rounded-5" alt="RTX 4070 Spider-Man img A"
                             style="max-height: 600px; width: auto; object-fit: cover;">
                     </div>
                     <div class="carousel-item">
-                        <img src="https://www.zotac.com/es/system/files/styles/w1024/private/product_gallery/graphics_cards/zt-d40700h-10smp-image11_0.jpg?itok=eAAkzZyx"
+                        <img src="https://www.zotac.com/es/system/files/styles/w1024/private/product_gallery/graphics_cards/zt-d40700h-10smp-image02_1.jpg?itok=lnmgl5gD"
                             class="d-block mx-auto rounded-5" alt="RTX 4070 Spider-Man img B"
                             style="max-height: 600px; width: auto; object-fit: cover;">
                     </div>
                     <div class="carousel-item">
-                        <img src="https://www.zotac.com/es/system/files/styles/w1024/private/product_gallery/graphics_cards/zt-d40700h-10smp-image08_1.jpg?itok=Lm-PP4ml"
+                        <img src="https://www.zotac.com/es/system/files/styles/w1024/private/product_gallery/graphics_cards/zt-d40700h-10smp-image08_1.jpg?itok=flMf6atf"
                             class="d-block mx-auto rounded-5" alt="RTX 4070 Spider-Man img C"
                             style="max-height: 600px; width: auto; object-fit: cover;">
                     </div>
@@ -506,7 +506,7 @@
     </main>
 
 
-    <footer class="bg-first-color text-white text-start pb-1 ps-5">
+    <footer class="bg-first-color text-white text-center pb-1 pt-2">
         <p>©ZOTAC 2025 Office <br> 1220 Highland Avenue, #1363 Duarte, CA 91010 USA</p>
     </footer>
 
