--- a/Reto 3/html/index.html
+++ b/Reto 3/html/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body class="bg-dark-subtle mb-5" data-bs-theme="dark">
+<body data-bs-theme="dark">
 
     <nav class="navbar navbar-expand-lg bg-dark ">
         <div class="container-fluid">
@@ -32,144 +32,136 @@
  -->
     <main>
         <article id="Portada">
-            <section>
-                <div class="card"> <!-- Dentro de un card para que se ajuste bien-->
-                    <img src=" https://a.storyblok.com/f/178900/1920x1080/73393b35df/ado-hibana-world-tour.png
+
+            <div class="card"> <!-- Dentro de un card para que se ajuste bien-->
+                <img src=" https://a.storyblok.com/f/178900/1920x1080/73393b35df/ado-hibana-world-tour.png
                     " alt="Portada Ado Hibana">
-                </div>
-            </section>
+            </div>
         </article>
-        <article id="Datos_Concierto">
-            <section class="card">
-                <img src=" https://poluxweb.com/Polux3/images/data/musica/2024/octubre/Noticias/24-ADO-WORLD-TOUR-2025-Hibana.jpg"
-                    class="card-img opacity-25" alt="...">
-                <div class="card-img-overlay">
-                    <div class="card bg-body bg-opacity-50">
-                        <h5 class="card-title py-5 my-5 text-center fs-1">Ado World Tour 2025 Hibana</h5>
-                        <div class="d-flex justify-content-center px-5 pb-5 mb-5">
-                            <p class="card-text mx-5">Ado Hibana, la sensación musical del momento, está llevando su
-                                talento a los escenarios más
-                                grandes del mundo con su gira mundial 2025. Conocida por su poderosa voz y su presencia
-                                escénica
-                                electrizante, Ado promete una experiencia inolvidable para todos sus fans. No te pierdas
-                                la
-                                oportunidad de ver en vivo a esta increíble artista mientras interpreta sus mayores
-                                éxitos y
-                                nuevas canciones en un espectáculo lleno de energía y emoción.</p>
-                        </div>
-                        <div class="text-center mb-5">
-                            <a class="btn btn-primary text-white border-1 rounded-2 border-light px-3 py-1"
-                                href="./shop.html" role="button">
-                                <h2>Comprar</h2>
-                            </a>
-                        </div>
+        <article id="Datos_Concierto" class="bg-body bg-opacity-75 pt-5">
+            <div class="card mx-5 bg-bod">
+                <h5 class="card-title py-5 text-center fs-1">Ado World Tour 2025 Hibana</h5>
+                <div class="d-flex justify-content-center px-5 pb-5 mb-5">
+                    <p class="card-text mx-5">Ado Hibana, la sensación musical del momento, está llevando su
+                        talento a los escenarios más
+                        grandes del mundo con su gira mundial 2025. Conocida por su poderosa voz y su presencia
+                        escénica
+                        electrizante, Ado promete una experiencia inolvidable para todos sus fans. No te pierdas
+                        la
+                        oportunidad de ver en vivo a esta increíble artista mientras interpreta sus mayores
+                        éxitos y
+                        nuevas canciones en un espectáculo lleno de energía y emoción.</p>
+                </div>
+                <div class="text-center mb-5">
+                    <a class="btn btn-primary text-white border-1 rounded-2 border-light px-3 py-1" href="./shop.html"
+                        role="button">
+                        <h2>Comprar</h2>
+                    </a>
+                </div>
+            </div>
 
-                        <!-- Como es solo una artista, agrego algunas de sus canciones -->
+
+            <!-- Como es solo una artista, agrego algunas de sus canciones -->
+            <div class="pb-5">
+                <h2 class="text-center my-3">Algunos exitos de Ado</h2>
+                <div
+                    class="row ror-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-6 g-4 p-5 d-flex justify-content-center">
+
+                    <div class="col text-center card-spotify card h-100 p-4 mx-3">
+                        <img aria-hidden="false" draggable="false" loading="eager"
+                            src="https://i.scdn.co/image/ab67616d00001e025a11303b900d06348d84337f"
+                            alt="Ado - Take Me to the Beach" class=" rounded-1">
+                        <div class="card-body mt-2">
+                            <h5 class="card-title">Take Me to the Beach (feat. Ado)</h5>
+                        </div>
+                        <div class="card-body d-flex flex-column justify-content-end">
+                            <p class="card-text"><i class="bi bi-people"></i> 27,257,130</p>
+                            <p class="card-text"> <i class="bi bi-clock "></i> 2:47</p>
+                        </div>
                         <div>
-                            <h2 class="text-center my-3">Algunos exitos de Ado</h2>
-                            <div class="row row-cols-2 row-cols-md-6 g-4 p-5 justify-content-center">
-                                <div class="col text-center">
-                                    <div class="card h-100  p-4">
-                                        <img aria-hidden="false" draggable="false" loading="eager"
-                                            src="https://i.scdn.co/image/ab67616d00001e025a11303b900d06348d84337f"
-                                            alt="Ado - Take Me to the Beach" class=" rounded-1">
-                                        <div class="card-body mt-2">
-                                            <h5 class="card-title">Take Me to the Beach (feat. Ado)</h5>
-                                        </div>
-                                        <div class="card-body d-flex flex-column justify-content-end">
-                                            <p class="card-text"><i class="bi bi-people"></i> 27,257,130</p>
-                                            <p class="card-text"> <i class="bi bi-clock "></i> 2:47</p>
-                                        </div>
-                                        <div>
-                                            <a class="btn btn-success text-black"
-                                                href="https://open.spotify.com/intl-es/track/4n7nwDqrdx3qmJvEACOMrN?si=c24590c437714d7a"
-                                                role="button"><i class="bi bi-spotify"></i> Escuchar</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col text-center">
-                                    <div class="card h-100  p-4">
-                                        <img aria-hidden="false" draggable="false" loading="eager"
-                                            src="https://i.scdn.co/image/ab67616d00001e021b1310c35fad57bc85027f19"
-                                            alt="Ado - 唱" class=" rounded-1">
-                                        <div class="card-body mt-2">
-                                            <h5 class="card-title">唱</h5>
-                                        </div>
-                                        <div class="card-body d-flex flex-column justify-content-end">
-                                            <p class="card-text"><i class="bi bi-people"></i> 167,573,338</p>
-                                            <p class="card-text"> <i class="bi bi-clock "></i> 3:12</p>
-                                        </div>
-                                        <div>
-                                            <a class="btn btn-success text-black"
-                                                href="https://open.spotify.com/intl-es/track/4n7nwDqrdx3qmJvEACOMrN?si=c24590c437714d7a"
-                                                role="button"><i class="bi bi-spotify"></i> Escuchar</a>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col text-center">
-                                    <div class="card h-100  p-4">
-                                        <img aria-hidden="false" draggable="false" loading="eager"
-                                            src="https://i.scdn.co/image/ab67616d00001e0264381fb5ba549f149ae74560"
-                                            alt="Ado - Usseewa" class=" rounded-1">
-                                        <div class="card-body mt-2">
-                                            <h5 class="card-title">Usseewa</h5>
-                                        </div>
-                                        <div class="card-body d-flex flex-column justify-content-end">
-                                            <p class="card-text"><i class="bi bi-people"></i> 224,057,948</p>
-                                            <p class="card-text"> <i class="bi bi-clock "></i> 3:26</p>
-                                        </div>
-                                        <div>
-                                            <a class="btn btn-success text-black"
-                                                href="https://open.spotify.com/intl-es/track/61KYsWS25JXUO4fGb1138X?si=2c382be01c5b4004 "
-                                                role="button"><i class="bi bi-spotify"></i> Escuchar</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col text-center">
-                                    <div class="card h-100  p-4">
-                                        <img aria-hidden="false" draggable="false" loading="eager"
-                                            src="https://i.scdn.co/image/ab67616d00001e020cbecafa929898c82adc519c"
-                                            alt="Ado - New Genesis" class=" rounded-1">
-                                        <div class="card-body mt-2">
-                                            <h5 class="card-title">New Genesis</h5>
-                                        </div>
-                                        <div class="card-body d-flex flex-column justify-content-end">
-                                            <p class="card-text"><i class="bi bi-people"></i> 233,223,530</p>
-                                            <p class="card-text"> <i class="bi bi-clock "></i> 3:46</p>
-                                        </div>
-                                        <div>
-                                            <a class="btn btn-success text-black"
-                                                href="https://open.spotify.com/intl-es/track/6A8NfypDHuwiLWbo4a1yca?si=298e3d8af3974fc9"
-                                                role="button"><i class="bi bi-spotify"></i> Escuchar</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col text-center">
-                                    <div class="card h-100  p-4">
-                                        <img aria-hidden="false" draggable="false" loading="eager"
-                                            src="https://i.scdn.co/image/ab67616d00001e020cbecafa929898c82adc519c"
-                                            alt="Ado - Backlight" class=" rounded-1">
-                                        <div class="card-body mt-2">
-                                            <h5 class="card-title">Backlight</h5>
-                                        </div>
-                                        <div class="card-body d-flex flex-column justify-content-end">
-                                            <p class="card-text"><i class="bi bi-people"></i> 146,729,732</p>
-                                            <p class="card-text"> <i class="bi bi-clock "></i> 3:57</p>
-                                        </div>
-                                        <div>
-                                            <a class="btn btn-success text-black"
-                                                href="https://open.spotify.com/intl-es/track/3WY0iazRPHOlIq6CdbKLZ6?si=18fdb5223d544678"
-                                                role="button"><i class="bi bi-spotify"></i> Escuchar</a>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
+                            <a class="btn btn-success text-black"
+                                href="https://open.spotify.com/intl-es/track/4n7nwDqrdx3qmJvEACOMrN?si=c24590c437714d7a"
+                                role="button"><i class="bi bi-spotify"></i> Escuchar</a>
                         </div>
                     </div>
+
+                    <div class="col text-center card-spotify card h-100 p-4 mx-3">
+
+                        <img aria-hidden="false" draggable="false" loading="eager"
+                            src="https://i.scdn.co/image/ab67616d00001e021b1310c35fad57bc85027f19" alt="Ado - 唱"
+                            class=" rounded-1">
+                        <div class="card-body mt-2">
+                            <h5 class="card-title">唱</h5>
+                        </div>
+                        <div class="card-body d-flex flex-column justify-content-end">
+                            <p class="card-text"><i class="bi bi-people"></i> 167,573,338</p>
+                            <p class="card-text"> <i class="bi bi-clock "></i> 3:12</p>
+                        </div>
+                        <div>
+                            <a class="btn btn-success text-black"
+                                href="https://open.spotify.com/intl-es/track/4n7nwDqrdx3qmJvEACOMrN?si=c24590c437714d7a"
+                                role="button"><i class="bi bi-spotify"></i> Escuchar</a>
+                        </div>
+                    </div>
+
+                    <div class="col text-center card-spotify card h-100 p-4 mx-3">
+
+                        <img aria-hidden="false" draggable="false" loading="eager"
+                            src="https://i.scdn.co/image/ab67616d00001e0264381fb5ba549f149ae74560" alt="Ado - Usseewa"
+                            class=" rounded-1">
+                        <div class="card-body mt-2">
+                            <h5 class="card-title">Usseewa</h5>
+                        </div>
+                        <div class="card-body d-flex flex-column justify-content-end">
+                            <p class="card-text"><i class="bi bi-people"></i> 224,057,948</p>
+                            <p class="card-text"> <i class="bi bi-clock "></i> 3:26</p>
+                        </div>
+                        <div>
+                            <a class="btn btn-success text-black"
+                                href="https://open.spotify.com/intl-es/track/61KYsWS25JXUO4fGb1138X?si=2c382be01c5b4004 "
+                                role="button"><i class="bi bi-spotify"></i> Escuchar</a>
+                        </div>
+                    </div>
+
+                    <div class="col text-center card-spotify card h-100 p-4 mx-3">
+
+                        <img aria-hidden="false" draggable="false" loading="eager"
+                            src="https://i.scdn.co/image/ab67616d00001e020cbecafa929898c82adc519c"
+                            alt="Ado - New Genesis" class=" rounded-1">
+                        <div class="card-body mt-2">
+                            <h5 class="card-title">New Genesis</h5>
+                        </div>
+                        <div class="card-body d-flex flex-column justify-content-end">
+                            <p class="card-text"><i class="bi bi-people"></i> 233,223,530</p>
+                            <p class="card-text"> <i class="bi bi-clock "></i> 3:46</p>
+                        </div>
+                        <div>
+                            <a class="btn btn-success text-black"
+                                href="https://open.spotify.com/intl-es/track/6A8NfypDHuwiLWbo4a1yca?si=298e3d8af3974fc9"
+                                role="button"><i class="bi bi-spotify"></i> Escuchar</a>
+                        </div>
+                    </div>
+                    <div class="col text-center card-spotify card h-100 p-4 mx-3">
+
+                        <img aria-hidden="false" draggable="false" loading="eager"
+                            src="https://i.scdn.co/image/ab67616d00001e020cbecafa929898c82adc519c" alt="Ado - Backlight"
+                            class=" rounded-1">
+                        <div class="card-body mt-2">
+                            <h5 class="card-title">Backlight</h5>
+                        </div>
+                        <div class="card-body d-flex flex-column justify-content-end">
+                            <p class="card-text"><i class="bi bi-people"></i> 146,729,732</p>
+                            <p class="card-text"> <i class="bi bi-clock "></i> 3:57</p>
+                        </div>
+                        <div>
+                            <a class="btn btn-success text-black"
+                                href="https://open.spotify.com/intl-es/track/3WY0iazRPHOlIq6CdbKLZ6?si=18fdb5223d544678"
+                                role="button"><i class="bi bi-spotify"></i> Escuchar</a>
+                        </div>
+                    </div>
+
                 </div>
-            </section>
+            </div>
         </article>
 
 
@@ -177,9 +169,10 @@
     </main>
 
 
-    <footer class="bg-dark text-white text-center">
+    <footer class="bg-dark text-white text-center pb-1 pt-2">
         <p>@Ado World Tour 2025 Hibana</p>
     </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
